# OMS-Skills

./: .gitignore  _inspect_api.py  _query_test.py  _test_all_intents.py  _test_all_v2.py  _test_analysis.py  _test_analysis2.py  _test_auth.py  _test_auth2.py  _test_cases.py  _test_client.py  _test_debug.py  _test_engine_debug.py  _test_fetch_debug.py  _test_final.py  _test_flat.py  _test_flat2.py  _test_multi_analysis.py  _test_pagesize.py  _test_trend.py  _test_trend2.py  pyproject.toml  weekly-report-W16-2026-04-13-to-2026-04-17.md
.hypothesis/constants/: 0014ca44f406ce01  007608b62cf9a44b  009e6c8dfc280f25  06432d4c37ec0af0  (+54 more)
cartonization_engine/: billing_calculator.py  box_selector.py  engine.py  fallback_handler.py  fill_rate_checker.py  geometry_checker.py  geometry_validator.py  hard_rule_checker.py  models.py  packer.py  pre_grouper.py  sorter.py
mcp_server/: README.md  oms_agent_server.py
tests/: conftest.py  test_counter_examples.py  test_properties.py  test_props_aggregator.py  test_props_billing.py  test_props_box_selector.py  test_props_fallback.py  test_props_ffd.py  test_props_fill_rate.py  test_props_rate_calculator.py  test_props_rate_engine.py  test_props_rate_models.py  test_props_surcharge.py  test_props_zone_resolver.py  test_rate_examples.py
前端自动测试/: capture-01-search-bnp.json  capture-02-bnp-detail.json  capture-03-bnp-test-connection.json  capture-04-add-dialog-load.json  capture-05-ftp-form-load.json  capture-06-shopify-form-load.json  login-page-snapshot.yml  net-after-login.txt  net-integration-home.txt  shopify-domain-note.txt
(+292 files in other folders)
