[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-engines"
version = "0.1.0"
description = "仓储引擎集合 - Cartonization Engine + OMS Query Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".kiro/skills/oms-query/scripts", ".kiro/skills/oms-analysis/scripts", ".kiro/skills/order-query/scripts"]
